--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,11 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/"
-        }
+        },
+        "files": [
+            "app/Helpers/helper.php",
+            "routes/web.php"
+        ]
     }
 
 }
